k8s/apps/kafka-ui/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: unbrdn
  labels:
    app: kafka-ui
    environment: prod
spec:
  selector:
    app: kafka-ui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
